--- a/sources/github-runner/release.yaml
+++ b/sources/github-runner/release.yaml
@@ -2,6 +2,8 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: datascience-notebook
+  annotations:
+    lsc-sde.nhs.uk/definitionVersion: "1.0.0"
 spec:
   targetNamespace: github-runner
   releaseName: datascience-notebook
@@ -15,7 +17,14 @@ spec:
   interval: 5m0s
   install:
     remediation:
-      retries: 10
+      retries: -1
+    disableWait: true
+    disableWaitForJobs: true
+  upgrade:
+    remediation:
+      retries: -1
+    disableWait: true
+    disableWaitForJobs: true
   values:
     github:
       repository: docker-datascience-notebook
