fix to shared config

--- a/sources/github-runner/shared-config/runner-config.yaml
+++ b/sources/github-runner/shared-config/runner-config.yaml
@@ -14,7 +14,7 @@ runner:
       cpu: 2
       memory: 256Mi
 
-  nodeSelector::
+  nodeSelector:
     lsc-sde.nhs.uk/nodeType: github-runner
 
 accessToken:
