--- a/cluster/local/kustomization.yaml
+++ b/cluster/local/kustomization.yaml
@@ -1,4 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: github-runner
-resources: []
+configMapGenerator:
+  - name: environment-config
+    files:
+      - values.yaml=runner-config.yaml
+generatorOptions:
+  disableNameSuffixHash: true
