--- a/cluster/sandbox/kustomization.yaml
+++ b/cluster/sandbox/kustomization.yaml
@@ -1,6 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: github-runner
+configMapGenerator:
+  - name: environment-config
+    files:
+      - values.yaml=runner-config.yaml
+generatorOptions:
+  disableNameSuffixHash: true
 resources:
   - secret.yaml
   - secret-job.yaml
