--- a/sources/github-runner/datascience-notebook/release.yaml
+++ b/sources/github-runner/datascience-notebook/release.yaml
@@ -3,7 +3,7 @@ kind: HelmRelease
 metadata:
   name: datascience-notebook
   annotations:
-    lsc-sde.nhs.uk/definitionVersion: "1.0.4"
+    lsc-sde.nhs.uk/definitionVersion: "1.0.5"
 spec:
   targetNamespace: github-runner
   releaseName: datascience-notebook
@@ -32,3 +32,6 @@ spec:
 
   - kind: ConfigMap
     name: shared-config
+
+  - kind: ConfigMap
+    name: environment-config
