--- a/sources/github-runner/runners/kustomization.yaml
+++ b/sources/github-runner/runners/kustomization.yaml
@@ -2,8 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: github-runner
 configMapGenerator:
-  - name: shared-config
+  - name: runner-config
     files:
       - values.yaml=runner-config.yaml
 generatorOptions:
   disableNameSuffixHash: true
+resources:
+  - release.yaml
