--- a/sources/github-runner/runners/release.yaml
+++ b/sources/github-runner/runners/release.yaml
@@ -1,12 +1,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: datascience-notebook
+  name: runners
   annotations:
     lsc-sde.nhs.uk/definitionVersion: "1.0.7"
 spec:
   targetNamespace: github-runner
-  releaseName: datascience-notebook
+  releaseName: runners
   chart:
     spec:
       chart: github-actions-runner
@@ -26,12 +26,8 @@ spec:
     disableWait: true
     disableWaitForJobs: true
   valuesFrom:
-  # Shared Config
   - kind: ConfigMap
-    name: datascience-notebook
-
-  - kind: ConfigMap
-    name: shared-config
+    name: runner-config
 
   - kind: ConfigMap
     name: environment-config
