--- a/cluster/sandbox/secret.yaml
+++ b/cluster/sandbox/secret.yaml
@@ -15,9 +15,9 @@ spec:
   parameters:
     usePodIdentity: "false"
     useVMManagedIdentity: "true"
-    userAssignedIdentityID: "009297ad-7a13-4d98-91d0-46f68c815882"
-    keyvaultName: lscsdesandbox-kvlt
-    tenantId: "f12f0279-8a84-4068-8322-7a6fb0f839b8"
+    userAssignedIdentityID: "00000000-0000-0000-0000-000000000000" # Replaced
+    keyvaultName: "replaced" # Replaced
+    tenantId: "00000000-0000-0000-0000-000000000000" # Replaced
     objects: |
         array:
         - |
