--- a/cluster/sandbox/secret.yaml
+++ b/cluster/sandbox/secret.yaml
@@ -15,9 +15,9 @@ spec:
   parameters:
     usePodIdentity: "false"
     useVMManagedIdentity: "true"
-    userAssignedIdentityID: "00000000-0000-0000-0000-000000000000" # Replaced
-    keyvaultName: "replaced" # Replaced
-    tenantId: "00000000-0000-0000-0000-000000000000" # Replaced
+    userAssignedIdentityID: "${AZURE_CLIENT_ID}" # Replaced
+    keyvaultName: "${AZURE_KEYVAULT_NAME}" # Replaced
+    tenantId: "${AZURE_TENANT_ID}" # Replaced
     objects: |
         array:
         - |
