fix to substitutions

--- a/cluster/sandbox/secret.yaml
+++ b/cluster/sandbox/secret.yaml
@@ -15,9 +15,9 @@ spec:
   parameters:
     usePodIdentity: "false"
     useVMManagedIdentity: "true"
-    userAssignedIdentityID: "${AZURE_CLIENT_ID}" # Replaced
-    keyvaultName: "${AZURE_KEYVAULT_NAME}" # Replaced
-    tenantId: "${AZURE_TENANT_ID}" # Replaced
+    userAssignedIdentityID: "${cluster-config:=AZURE_CLIENT_ID}" # Replaced
+    keyvaultName: "${cluster-config:=AZURE_KEYVAULT_NAME}" # Replaced
+    tenantId: "${cluster-config:=AZURE_TENANT_ID}" # Replaced
     objects: |
         array:
         - |
