removed curly braces

--- a/cluster/sandbox/secret.yaml
+++ b/cluster/sandbox/secret.yaml
@@ -15,9 +15,9 @@ spec:
   parameters:
     usePodIdentity: "false"
     useVMManagedIdentity: "true"
-    userAssignedIdentityID: "${azure_client_id}" # Replaced
-    keyvaultName: "${azure_keyvault_name}" # Replaced
-    tenantId: "${azure_tenant_id}" # Replaced
+    userAssignedIdentityID: $azure_client_id
+    keyvaultName: $azure_keyvault_name
+    tenantId: $azure_tenant_id
     objects: |
         array:
         - |
