--- a/cluster/sandbox/kustomization.yaml
+++ b/cluster/sandbox/kustomization.yaml
@@ -10,7 +10,17 @@ generatorOptions:
 resources:
   - secret.yaml
   - secret-job.yaml
-substituteFrom:
-  - kind: ConfigMap
-    name: cluster-config
-    namespace: lscsde-config
+replacements:
+  - source:
+      kind: ConfigMap
+      name: cluster-config
+      namespace: lscsde-config
+      fieldpath: data.azure_client_id
+    targets:
+      - select: 
+          group: secrets-store.csi.x-k8s.io
+          version: v1
+          kind: SecretProviderClass
+          name: pat-token-sync
+        fieldPaths:
+          - spec.parameters.userAssignedIdentityID
