fix to SecretProviderClass

--- a/cluster/sandbox/secret.yaml
+++ b/cluster/sandbox/secret.yaml
@@ -15,9 +15,9 @@ spec:
   parameters:
     usePodIdentity: "false"
     useVMManagedIdentity: "true"
-    userAssignedIdentityID: $azure_client_id
-    keyvaultName: $azure_keyvault_name
-    tenantId: $azure_tenant_id
+    userAssignedIdentityID: ${azure_client_id}
+    keyvaultName: ${azure_keyvault_name}
+    tenantId: ${azure_tenant_id}
     objects: |
         array:
         - |
