--- a/github-runner/kustomization.yaml
+++ b/github-runner/kustomization.yaml
@@ -4,6 +4,9 @@ namespace: github-runner
 configMapGenerator:
   - name: environment-config
     files:
-      - values.yaml=runner-config.yaml
-generatorOptions:
-  disableNameSuffixHash: true
+      - values.yaml=environment-config.yaml
+resources:
+  - repository.yaml
+  - runners
+  - secret.yaml
+  - secret-job.yaml
