fix to tolerations and added flux-branch annotation

--- a/github-runner/environment-config.yaml
+++ b/github-runner/environment-config.yaml
@@ -6,7 +6,7 @@ runner:
   tolerations:
   - key: "sdeAppType"
     operator: "Equal"
-    value: "github-runner"
+    value: "gitops"
     effect: "NoSchedule"
   workVolume:
   - name: workdir
