--- a/github-runner/repository.yaml
+++ b/github-runner/repository.yaml
@@ -4,4 +4,4 @@ metadata:
   name: github-runner
 spec:
   interval: 5m
-  url: https://lsc-sde.github.io/lsc-sde/iac/helm/
+  url: https://lsc-sde.github.io/iac-helm-repository/
