--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,5 +11,5 @@ jobs:
     uses: lsc-sde/lsc-sde/.github/workflows/flux-release.yaml@main
     with:
       directory: iac/flux/github-action-runners
-      yamlPath: github_runner_branch
+      yamlPath: github_runner
     secrets: inherit
